--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
     <title></title>
   </head>
   <body class="">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <h1>Gatitos</h1>
+    <form>
+      <fieldset>
+        <label>Hola</label>
+      </fieldset>
+    </form>
+    
+
+    <script>
+    </script>
   </body>
 </html>
