--- a/index.html
+++ b/index.html
@@ -16,16 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
   </head>
-  <body class="">
-    <h1>Gatitos</h1>
-    <form>
-      <fieldset>
-        <label>Hola</label>
-      </fieldset>
-    </form>
-    
-
-    <script>
-    </script>
+  <body id="root">
+  </body>
+  <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
